chore : SonarQube issues refactoring_25_0619_5